@@ -1,4 +1,4 @@
-/* $Id: inputbox.c,v 1.4 2005-01-24 22:19:10 schaffner Exp $ */
+/* $Id: inputbox.c,v 1.5 2005-01-25 21:26:44 schaffner Exp $ */
 /*
 THE COMPUTER CODE CONTAINED HEREIN IS THE SOLE PROPERTY OF PARALLAX
 SOFTWARE CORPORATION ("PARALLAX").  PARALLAX, IN DISTRIBUTING THE CODE TO
@@ -13,7 +13,7 @@ COPYRIGHT 1993-1999 PARALLAX SOFTWARE CORPORATION.  ALL RIGHTS RESERVED.
 */
 
 #ifdef RCS
-static char rcsid[] = "$Id: inputbox.c,v 1.4 2005-01-24 22:19:10 schaffner Exp $";
+static char rcsid[] = "$Id: inputbox.c,v 1.5 2005-01-25 21:26:44 schaffner Exp $";
 #endif
 
 #ifdef HAVE_CONFIG_H
@@ -118,7 +118,7 @@ UI_GADGET_INPUTBOX * ui_add_gadget_inputbox( UI_WINDOW * wnd, short x, short y, 
 
 void ui_inputbox_do( UI_GADGET_INPUTBOX * inputbox, int keypress )
 {
-	char ascii;
+	unsigned char ascii;
 	inputbox->oldposition = inputbox->position;
 
 	inputbox->pressed=0;
